--- a/index.html
+++ b/index.html
@@ -647,8 +647,8 @@
     // In-memory data storage
     let workEntries = [
       {
-        caseId: "CASE001",
-        pstamLogin: "employee123",
+        caseId: "1111111111",
+        pstamLogin: "kumarqag",
         startTime: "09:00",
         endTime: "10:30",
         caseStatus: "Resolve",
@@ -656,8 +656,8 @@
         aux: "Available"
       },
       {
-        caseId: "CASE002",
-        pstamLogin: "employee456",
+        caseId: "222222222",
+        pstamLogin: "kumarqag",
         startTime: "11:00",
         endTime: "12:15",
         caseStatus: "PMA",
