Update title and table headers in index.html

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Daily Employee Work Tracker</title>
+  <title>Daily Tracker</title>
   <style>
     /* Design System */
     :root {
@@ -615,13 +615,13 @@
         <table id="work-table">
           <thead>
             <tr>
-              <th data-sort="caseId">Case ID <span class="sort-indicator">↕</span></th>
+              <th data-sort="aux">Aux <span class="sort-indicator">↕</span></th>
               <th data-sort="pstamLogin">PSTAM Login <span class="sort-indicator">↕</span></th>
+              <th data-sort="caseId">Case ID <span class="sort-indicator">↕</span></th>
               <th data-sort="startTime">Start Time <span class="sort-indicator">↕</span></th>
               <th data-sort="endTime">End Time <span class="sort-indicator">↕</span></th>
               <th data-sort="caseStatus">Case Status <span class="sort-indicator">↕</span></th>
               <th data-sort="acht">ACHT <span class="sort-indicator">↕</span></th>
-              <th data-sort="aux">Aux <span class="sort-indicator">↕</span></th>
               <th>Actions</th>
             </tr>
           </thead>
